temp fix for stores on mobile

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,6 +13,11 @@ dl, dd, ol, ul, figure {
 /**
  * Basic styling
  */
+
+html, body {
+  overflow-x: hidden;
+}
+
 body {
     background: $background-color url("/images/starrysky.jpg");
     box-shadow: inset 0 0 0 1000px rgba(255, 255, 255, 0.2);
