--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -247,4 +247,9 @@ article.post {
         
         }
     }
+    @include media-query($on-ipad) {
+     .city {
+         display: none;
+     }
+ }
 }
