--- a/css/main.scss
+++ b/css/main.scss
@@ -27,6 +27,7 @@ $grey-color-dark:  darken($grey-color, 25%);
 $content-width:    800px;
 
 $on-palm:          625px;
+$on-ipad:          700px;
 $on-laptop:        900px;
 
 
